--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="https://images.ctfassets.net/1fvlg6xqnm65/2T7614WXaBzs0pX9P1hl9l/8f29d6cdbef803cd2e63d4dc55377ef3/M486360__1_.jpg" class="bgimg" alt="">
+    <img src="https://images.ctfassets.net/1fvlg6xqnm65/2T7614WXaBzs0pX9P1hl9l/8f29d6cdbef803cd2e63d4dc55377ef3/M486360__1_.jpg" class="background-img" alt="">
     <header>
       <nav>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/F1.svg/2560px-F1.svg.png" height="32z" alt="">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/F1.svg/2560px-F1.svg.png" height="32" alt="">
         <ul class="grid-horizontal grid-header">
           <li>Home</li>
           <li>Serviços</li>
@@ -32,7 +32,7 @@
           <ul class="grid-horizontal large cars">
             <li><img src="https://images.ctfassets.net/1fvlg6xqnm65/3FvkYcwTf5EtJokM8PogyP/f683663d54b3595a55b44668cd506bb9/F1-75-Live-Wrap-IMAGE-1.jpg" alt=""><p>2025</p></li>
             <li><img src="https://s2-ge.glbimg.com/_iDU-LIpv5-pVgLmiYMDbEuolcE=/0x498:2000x2127/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2024/Q/i/0CBX99S2GcfsuwTUmXfQ/ggsjtkoxcaapghc.jpg" class="middle" alt=""><p>2024</p></li>
-            <li><img src="https://www.goodwood.com/globalassets/.road--racing/race/modern/2023/2-february/mercedes-f1-reveal/mercedes_w14_2023_formula1_goodwood_15022023_05.jpg?rxy=0.5,0.5" alt="" class="third"><p>2023</p></li>
+            <li><img src="https://www.goodwood.com/globalassets/.road--racing/race/modern/2023/2-february/mercedes-f1-reveal/mercedes_w14_2023_formula1_goodwood_15022023_05.jpg?rxy=0.5,0.5" alt="" class="cars-third-item"><p>2023</p></li>
           </ul>
         </div>
       </section>
